Fix some issues in the dark mode by using correct primer variables

--- a/frontend/src/global_styles/content/_activity_list.sass
+++ b/frontend/src/global_styles/content/_activity_list.sass
@@ -13,6 +13,7 @@
 
     &-title
       @include spot-body-small (bold)
+      color: var(--body-font-color)
 
     &-subtitle
       @include spot-caption
